--- a/app/src/main/res/layout/layout_activity_principal_dospaneles.xml
+++ b/app/src/main/res/layout/layout_activity_principal_dospaneles.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:layout_gravity="center_vertical"
         android:layout_margin="50dp">
         <LinearLayout
@@ -54,6 +54,19 @@
         android:layout_weight="1">
         <FrameLayout
             android:id="@+id/framelayout_contenedor_detalle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
+
+        <FrameLayout
+            android:id="@+id/frameLayout_contenedor_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3" />
